--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="calc-btn number-btn js-3-btn"><p>3</p></div>
         <div class="calc-btn operator-btn js-add-btn"><p>+</p></div>
         <div class="calc-btn number-btn js-0-btn"><p>0</p></div>
-        <div class="calc-btn number-btn js-separator-btn"><p>.</p></div>
+        <div class="calc-btn separator-btn js-separator-btn"><p>.</p></div>
         <div class="calc-btn operator-btn equal-btn js-equal-btn">
           <p>=</p>
         </div>
