Update get equation result functionality
Add data attributes of operator to html.
Replace addBtnEvent() with operatorBtnEvent(), which works with all four main operators. It uses data attributes set in html and calls with that the correct maths function.

--- a/index.html
+++ b/index.html
@@ -15,19 +15,39 @@
         <div class="calc-btn varia-btn js-clear-btn"><p>AC</p></div>
         <div class="calc-btn varia-btn js-change-sign-btn"><p>+/-</p></div>
         <div class="calc-btn varia-btn js-percent-btn"><p>%</p></div>
-        <div class="calc-btn operator-btn js-divide-btn"><p>/</p></div>
+        <div
+          class="calc-btn operator-btn js-divide-btn js-operator-btn"
+          data-operator="divide"
+        >
+          <p>/</p>
+        </div>
         <div class="calc-btn number-btn js-7-btn"><p>7</p></div>
         <div class="calc-btn number-btn js-8-btn"><p>8</p></div>
         <div class="calc-btn number-btn js-9-btn"><p>9</p></div>
-        <div class="calc-btn operator-btn js-multiply-btn"><p>x</p></div>
+        <div
+          class="calc-btn operator-btn js-multiply-btn js-operator-btn"
+          data-operator="multiply"
+        >
+          <p>x</p>
+        </div>
         <div class="calc-btn number-btn js-4-btn"><p>4</p></div>
         <div class="calc-btn number-btn js-5-btn"><p>5</p></div>
         <div class="calc-btn number-btn js-6-btn"><p>6</p></div>
-        <div class="calc-btn operator-btn js-subtract-btn"><p>–</p></div>
+        <div
+          class="calc-btn operator-btn js-subtract-btn js-operator-btn"
+          data-operator="subtract"
+        >
+          <p>–</p>
+        </div>
         <div class="calc-btn number-btn js-1-btn"><p>1</p></div>
         <div class="calc-btn number-btn js-2-btn"><p>2</p></div>
         <div class="calc-btn number-btn js-3-btn"><p>3</p></div>
-        <div class="calc-btn operator-btn js-add-btn"><p>+</p></div>
+        <div
+          class="calc-btn operator-btn js-add-btn js-operator-btn"
+          data-operator="add"
+        >
+          <p>+</p>
+        </div>
         <div class="calc-btn number-btn js-0-btn"><p>0</p></div>
         <div class="calc-btn separator-btn js-separator-btn"><p>.</p></div>
         <div class="calc-btn operator-btn equal-btn js-equal-btn">
