Add footer + css
Add footer.
Add footer css.
Add empty div as body's first child in order to split body to three parts, calculator being in the middle and footer in the end.
Edit body style for positioning footer.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
+    <div></div>
     <div class="calculator">
       <div class="display js-display"><p>0</p></div>
       <div class="calc-buttons-grid">
@@ -55,5 +56,15 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <p>
+        &copy;
+        <a href="https://github.com/andras-tsitskan" target="_blank"
+          >Andraš Tšitškan</a
+        >
+        2022
+      </p>
+    </footer>
   </body>
 </html>
