--- a/index.html
+++ b/index.html
@@ -18,39 +18,48 @@
         <div
           class="calc-btn operator-btn js-divide-btn js-operator-btn"
           data-operator="divide"
+          data-key="/"
         >
           <p>/</p>
         </div>
-        <div class="calc-btn number-btn js-7-btn"><p>7</p></div>
-        <div class="calc-btn number-btn js-8-btn"><p>8</p></div>
-        <div class="calc-btn number-btn js-9-btn"><p>9</p></div>
+        <div class="calc-btn number-btn js-7-btn" data-key="7"><p>7</p></div>
+        <div class="calc-btn number-btn js-8-btn" data-key="8"><p>8</p></div>
+        <div class="calc-btn number-btn js-9-btn" data-key="9"><p>9</p></div>
         <div
           class="calc-btn operator-btn js-multiply-btn js-operator-btn"
           data-operator="multiply"
+          data-key="*"
         >
           <p>x</p>
         </div>
-        <div class="calc-btn number-btn js-4-btn"><p>4</p></div>
-        <div class="calc-btn number-btn js-5-btn"><p>5</p></div>
-        <div class="calc-btn number-btn js-6-btn"><p>6</p></div>
+        <div class="calc-btn number-btn js-4-btn" data-key="4"><p>4</p></div>
+        <div class="calc-btn number-btn js-5-btn" data-key="5"><p>5</p></div>
+        <div class="calc-btn number-btn js-6-btn" data-key="6"><p>6</p></div>
         <div
           class="calc-btn operator-btn js-subtract-btn js-operator-btn"
           data-operator="subtract"
+          data-key="-"
         >
           <p>–</p>
         </div>
-        <div class="calc-btn number-btn js-1-btn"><p>1</p></div>
-        <div class="calc-btn number-btn js-2-btn"><p>2</p></div>
-        <div class="calc-btn number-btn js-3-btn"><p>3</p></div>
+        <div class="calc-btn number-btn js-1-btn" data-key="1"><p>1</p></div>
+        <div class="calc-btn number-btn js-2-btn" data-key="2"><p>2</p></div>
+        <div class="calc-btn number-btn js-3-btn" data-key="3"><p>3</p></div>
         <div
           class="calc-btn operator-btn js-add-btn js-operator-btn"
           data-operator="add"
+          data-key="+"
         >
           <p>+</p>
         </div>
-        <div class="calc-btn number-btn js-0-btn"><p>0</p></div>
-        <div class="calc-btn separator-btn js-separator-btn"><p>.</p></div>
-        <div class="calc-btn operator-btn equal-btn js-equal-btn">
+        <div class="calc-btn number-btn js-0-btn" data-key="0"><p>0</p></div>
+        <div class="calc-btn separator-btn js-separator-btn" data-key=",">
+          <p>.</p>
+        </div>
+        <div
+          class="calc-btn operator-btn equal-btn js-equal-btn"
+          data-key="Enter"
+        >
           <p>=</p>
         </div>
       </div>
