Add backspace functionality

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <div class="calc-btn separator-btn js-separator-btn" data-key=",">
           <p>.</p>
         </div>
+        <div class="calc-btn varia-btn js-backspace-btn" data-key="Backspace">
+          <p>&Lt;</p>
+        </div>
         <div
           class="calc-btn operator-btn equal-btn js-equal-btn"
           data-key="Enter"
